TermometroAutomaticoGUI/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> comandos
Rule 1     comandos -> expresion
Rule 2     comandos -> empty
Rule 3     expresion -> DISTANCIA numero
Rule 4     numero -> ENTERO
Rule 5     numero -> FLOTANTE
Rule 6     empty -> <empty>

Terminals, with rules where they appear

DISTANCIA            : 3
ENTERO               : 4
FLOTANTE             : 5
error                : 

Nonterminals, with rules where they appear

comandos             : 0
empty                : 2
expresion            : 1
numero               : 3

Parsing method: LALR

state 0

    (0) S' -> . comandos
    (1) comandos -> . expresion
    (2) comandos -> . empty
    (3) expresion -> . DISTANCIA numero
    (6) empty -> .

    DISTANCIA       shift and go to state 4
    $end            reduce using rule 6 (empty -> .)

    comandos                       shift and go to state 1
    expresion                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> comandos .



state 2

    (1) comandos -> expresion .

    $end            reduce using rule 1 (comandos -> expresion .)


state 3

    (2) comandos -> empty .

    $end            reduce using rule 2 (comandos -> empty .)


state 4

    (3) expresion -> DISTANCIA . numero
    (4) numero -> . ENTERO
    (5) numero -> . FLOTANTE

    ENTERO          shift and go to state 6
    FLOTANTE        shift and go to state 7

    numero                         shift and go to state 5

state 5

    (3) expresion -> DISTANCIA numero .

    $end            reduce using rule 3 (expresion -> DISTANCIA numero .)


state 6

    (4) numero -> ENTERO .

    $end            reduce using rule 4 (numero -> ENTERO .)


state 7

    (5) numero -> FLOTANTE .

    $end            reduce using rule 5 (numero -> FLOTANTE .)

